--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -1,11 +1,15 @@
 {% extends 'movies/base.html' %}
+{% load static %}
 {% block title %} {{ movie.title }}{% endblock %}
+
 {% block container %}
 	<div class="container py-md-3">
 {% endblock container %}
+
 {% block sidebar %}
 	<div class="side-bar col-lg-4">
 {% endblock sidebar %}
+
 {% block movie %}
 	<div class="left-ads-display col-lg-8">
 		<div class="row">
@@ -13,105 +17,100 @@
 				<img src="{{ movie.poster.url }}" class="img-fluid" alt="">
 			</div>
 			<div class="desc1-right col-md-6 pl-lg-4">
-				<h3 class="editContent" style="outline: none; cursor: inherit;">
+				<h3 class="editContent">
 					{{ movie.title }}
 				</h3>
 				<h5 class="editContent"></h5>
 				<ul>
-					<li style="list-style: none"><span><b>Год:</b> {{ movie.year }}</span></li>
-					<li style="list-style: none"><span><b>Страна:</b> {{ movie.country }}</span>
+					<li>
+						<span><b>Год:</b> {{ movie.year }}</span>
 					</li>
-					<li style="list-style: none"><span><b>Слоган:</b> {{ movie.tagline }} </span>
+					<li>
+						<span><b>Страна:</b> {{ movie.country }}</span>
 					</li>
-					<li style="list-style: none">
-					<span><b>Режиссер:</b>
-						{% for person in movie.director.all %}
-							{{ person.name }}
-						{% endfor %}
-					</span></li>
-					<li style="list-style: none">
-					<span><b>Актеры:</b>
-						{% for actor in movie.actors.all %}
-							{{ actor.name }}
-						{% endfor %}
-					</span>
+					<li>
+						<span><b>Слоган:</b> {{ movie.tagline }}</span>
 					</li>
-					<li style="list-style: none">
-					<span><b>Жанр:</b>
-						{% for genre in movie.genres.all %}
-							{{ genre.name }}
-						{% endfor %}
-					</span>
+					<li>
+						<span><b>Режиссер:</b>
+							{% for person in movie.director.all %}
+								{{ person.name }}
+							{% endfor %}
+						</span>
 					</li>
-					<li style="list-style: none"><span><b>Премьера в мире:</b> {{ movie.world_premiere }} </span>
+					<li>
+						<span><b>Актеры:</b>
+							{% for actor in movie.actors.all %}
+								{{ actor.name }}
+							{% endfor %}
+						</span>
 					</li>
-					<li style="list-style: none">
+					<li>
+						<span><b>Жанр:</b>
+							{% for genre in movie.genres.all %}
+								{{ genre.name }}
+							{% endfor %}
+						</span>
+					</li>
+					<li>
+						<span><b>Премьера в мире:</b> {{ movie.world_premiere }} </span>
+					</li>
+					<li>
 						<span><b>Бюджет:</b> ${{ movie.budget }}</span></li>
-					<li style="list-style: none">
+					<li>
 						<span><b>Сборы в США:</b> ${{ movie.fees_in_usa }}</span></li>
-					<li style="list-style: none"><span><b>Сборы в мире:</b> ${{ movie.fees_in_world }} </span>
+					<li>
+						<span><b>Сборы в мире:</b> ${{ movie.fees_in_world }}</span>
 					</li>
-					<li style="list-style: none">
+					<li>
 						<a href="#"><b>Рейтинг:</b>
-							<span class="fa fa-star" aria-hidden="true"
-							      style="outline: none; cursor: inherit;"></span>
-							<span class="fa fa-star" aria-hidden="true"
-							      style="outline: none; cursor: inherit;"></span>
-							<span class="fa fa-star" aria-hidden="true"
-							      style="outline: none; cursor: inherit;"></span>
-							<span class="fa fa-star" aria-hidden="true"
-							      style="outline: none; cursor: inherit;"></span>
-							<span class="fa fa-star" aria-hidden="true"
-							      style="outline: none; cursor: inherit;"></span>
-							<span class="editContent"
-							      style="outline: none; cursor: inherit;">5.0</span>
+							<span class="fa fa-star" aria-hidden="true"></span>
+							<span class="fa fa-star" aria-hidden="true"></span>
+							<span class="fa fa-star" aria-hidden="true"></span>
+							<span class="fa fa-star" aria-hidden="true"></span>
+							<span class="fa fa-star" aria-hidden="true"></span>
+							<span class="editContent">5.0</span>
 						</a>
 					</li>
-					<div class="share-desc">
-						<div class="share">
-							<h4 class="editContent"
-							    style="outline: none; cursor: inherit;">
-								Share:</h4>
-							<ul class="w3layouts_social_list list-unstyled">
-								<li>
-									<a href="#" class="w3pvt_facebook editContent"
-									   style="outline: none; cursor: inherit;">
-									<span class="fa fa-facebook-f" style="outline: none; cursor: inherit;">
-									</span>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="w3pvt_twitter editContent"
-									   style="outline: none; cursor: inherit;">
-									<span class="fa fa-twitter" style="outline: none; cursor: inherit;">
-									</span>
-									</a>
-								</li>
-								<li>
-									<a href="#" class="w3pvt_dribble editContent"
-									   style="outline: none; cursor: inherit;">
-									<span class="fa fa-dribbble" style="outline: none; cursor: inherit;">
-									</span>
-									</a>
-								</li>
-							</ul>
-						</div>
-						<div class="clearfix"></div>
-					</div>
 				</ul>
+				<div class="share-desc">
+					<div class="share">
+						<h4 class="editContent">
+							Share:
+						</h4>
+						<ul class="w3layouts_social_list list-unstyled">
+							<li>
+								<a href="#" class="w3pvt_facebook editContent">
+									<span class="fa fa-facebook-f"></span>
+								</a>
+							</li>
+							<li>
+								<a href="#" class="w3pvt_twitter editContent">
+									<span class="fa fa-twitter"></span>
+								</a>
+							</li>
+							<li>
+								<a href="#" class="w3pvt_dribble editContent">
+									<span class="fa fa-dribbble"></span>
+								</a>
+							</li>
+						</ul>
+					</div>
+					<div class="clearfix"></div>
+				</div>
 			</div>
 		</div>
 		<div class="row sub-para-w3layouts mt-5">
-
-			<h3 class="shop-sing editContent" style="outline: none; cursor: inherit;"> О фильме {{ movie.title }}</h3>
+			<h3 class="shop-sing editContent">
+				О фильме {{ movie.title }}
+			</h3>
 			<p>
 				{% for image in movie.movieshots_set.all %}
 					<img src="{{ image.image.url }}" class="img-movie-shots" alt="{{ image.description }}">
 				{% endfor %}
 			</p>
-			<p class="editContent" style="outline: none; cursor: inherit;">{{ movie.description }}</p>
-			<p class="mt-3 italic-blue editContent"
-			   style="outline: none; cursor: inherit;">
+			<p class="editContent">{{ movie.description }}</p>
+			<p class="mt-3 italic-blue editContent">
 				<iframe width="560" height="315"
 				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"
 				        frameborder="0" allow="accelerometer; autoplay;
@@ -124,14 +123,15 @@
 		<div class="row">
 			<!-- contact form grid -->
 			<div class="contact-single">
-				<h3 class="editContent" style="outline: none; cursor: inherit;">
-					<span class="sub-tittle editContent" style="outline: none; cursor: inherit;">
-						02
+				<h3 class="editContent">
+					<span class="sub-tittle editContent">
+						{{ movie.reviews_set.all.count }}
 					</span>
 					Оставить отзыв
 				</h3>
-				<form action="{% url 'add_review' movie.id %}" method="post" class="mt-4">
+				<form action="{% url 'add_review' movie.id %}" method="post" class="mt-4" id="formReview">
 					{% csrf_token %}
+					<input type="hidden" name="parent" id="contactparent" value="">
 					<div class="form-group editContent">
 						<label for="contactcomment" class="editContent">
 							Ваш комментарий *
@@ -162,9 +162,9 @@
 			</div>
 			<!--  //contact form grid ends here -->
 		</div>
-		{% for review in movie.reviews_set.all %}
+		{% for review in movie.get_review %}
 			<div class="media py-5">
-				<img src="bundles/images/te2.jpg" class="mr-3 img-fluid" alt="image">
+				<img src="{% static 'images/te2.jpg' %}" class="mr-3 img-fluid" alt="image">
 				<div class="media-body mt-4">
 					<h5 class="mt-0 editContent">
 						{{ review.name }}
@@ -172,24 +172,32 @@
 					<p class="mt-2 editContent">
 						{{ review.text }}
 					</p>
-					{#					<div class="media mt-5 editContent">#}
-					{#						<a class="pr-3" href="#">#}
-					{#							<img src="bundles/images/te1.jpg" class="img-fluid " alt="image"#}
-					{#							     style="outline: none; cursor: inherit;">#}
-					{#						</a>#}
-					{#						<div class="media-body">#}
-					{#							<h5 class="mt-0 editContent" style="outline: none; cursor: inherit;">#}
-					{#								Leia#}
-					{#							</h5>#}
-					{#							<p class="mt-2 editContent" style="outline: none; cursor: inherit;">#}
-					{#								Позже будет описание#}
-					{#							</p>#}
-					{#						</div>#}
-					{#					</div>#}
+					<a href="#formReview" onclick="addReview('{{ review.name }}', '{{ review.id }}')">Ответить</a>
+					{% for rew in review.reviews_set.all %}
+						<div class="media mt-5 editContent">
+							<a class="pr-3" href="#">
+								<img src="{% static 'images/te1.jpg' %}" class="img-fluid " alt="image">
+							</a>
+							<div class="media-body">
+								<h5 class="mt-0 editContent">
+									{{ rew.name }}
+								</h5>
+								<p class="mt-2 editContent">
+									{{ rew.text }}
+								</p>
+							</div>
+						</div>
+					{% endfor %}
 				</div>
 			</div>
 		{% endfor %}
 	</div>
+	<script>
+        function addReview(name, id) {
+            document.getElementById("contactparent").value = id;
+            document.getElementById("contactcomment").innerText = `${name}, `
+        }
+	</script>
 	</div>
 	</div>
 {% endblock movie %}
