--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -109,15 +109,15 @@
 					<img src="{{ image.image.url }}" class="img-movie-shots" alt="{{ image.description }}">
 				{% endfor %}
 			</p>
-			<p class="editContent">{{ movie.description }}</p>
-			<p class="mt-3 italic-blue editContent">
-				<iframe width="560" height="315"
-				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"
-				        frameborder="0" allow="accelerometer; autoplay;
-                                                                           encrypted-media; gyroscope; picture-in-picture"
-				        allowfullscreen>
-				</iframe>
-			</p>
+			<p class="editContent">{{ movie.description|safe }}</p>
+{#			<p class="mt-3 italic-blue editContent">#}
+{#				<iframe width="560" height="315"#}
+{#				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"#}
+{#				        frameborder="0" allow="accelerometer; autoplay;#}
+{#                                                                           encrypted-media; gyroscope; picture-in-picture"#}
+{#				        allowfullscreen>#}
+{#				</iframe>#}
+{#			</p>#}
 		</div>
 		<hr>
 		<div class="row">
