--- a/templates/movies/movie_list.html
+++ b/templates/movies/movie_list.html
@@ -3,7 +3,7 @@
 {% block movie %}
 	<div class="left-ads-display col-lg-9">
 		<div class="row">
-			{% for movie in movie_list %}
+			{% for movie in object_list %}
 				<div class="col-md-4 product-men">
 					<div class="product-shoe-info editContent text-center mt-lg-4">
 						<div class="men-thumb-item">
