--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -34,14 +34,14 @@
 					<li>
 						<span><b>Режиссер:</b>
 							{% for person in movie.director.all %}
-								{{ person.name }}
+								<a href="{{ person.get_absolute_url }}">{{ person.name }}</a>
 							{% endfor %}
 						</span>
 					</li>
 					<li>
 						<span><b>Актеры:</b>
 							{% for actor in movie.actors.all %}
-								{{ actor.name }}
+								<a href="{{ actor.get_absolute_url }}">{{ actor.name }}</a>
 							{% endfor %}
 						</span>
 					</li>
@@ -110,14 +110,14 @@
 				{% endfor %}
 			</p>
 			<p class="editContent">{{ movie.description|safe }}</p>
-{#			<p class="mt-3 italic-blue editContent">#}
-{#				<iframe width="560" height="315"#}
-{#				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"#}
-{#				        frameborder="0" allow="accelerometer; autoplay;#}
-{#                                                                           encrypted-media; gyroscope; picture-in-picture"#}
-{#				        allowfullscreen>#}
-{#				</iframe>#}
-{#			</p>#}
+			{#			<p class="mt-3 italic-blue editContent">#}
+			{#				<iframe width="560" height="315"#}
+			{#				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"#}
+			{#				        frameborder="0" allow="accelerometer; autoplay;#}
+			{#                                                                           encrypted-media; gyroscope; picture-in-picture"#}
+			{#				        allowfullscreen>#}
+			{#				</iframe>#}
+			{#			</p>#}
 		</div>
 		<hr>
 		<div class="row">
