--- a/templates/base.html
+++ b/templates/base.html
@@ -38,5 +38,8 @@
 	{% endblock %}
 	{% include 'include/footer.html' %}
 </div>
+<script src="{% static 'js/script.js' %}"></script>
+<script src="http://twitter.github.io/hogan.js/builds/3.0.1/hogan-3.0.1.js"></script>
+
 </body>
 </html>
