--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -23,7 +23,7 @@
 				<h5 class="editContent"></h5>
 				<ul>
 					<li>
-						<span><b>Год:</b> {{ movie.year }}</span>
+						<span><b>Год:</b> {{ movie.year }}{{ movie.get_rating }}</span>
 					</li>
 					<li>
 						<span><b>Страна:</b> {{ movie.country }}</span>
@@ -63,14 +63,17 @@
 						<span><b>Сборы в мире:</b> ${{ movie.fees_in_world }}</span>
 					</li>
 					<li>
-						<a href="#"><b>Рейтинг:</b>
-							<span class="fa fa-star" aria-hidden="true"></span>
-							<span class="fa fa-star" aria-hidden="true"></span>
-							<span class="fa fa-star" aria-hidden="true"></span>
-							<span class="fa fa-star" aria-hidden="true"></span>
-							<span class="fa fa-star" aria-hidden="true"></span>
-							<span class="editContent">5.0</span>
-						</a>
+						<form action="{% url 'add_rating' %}" method="post" name="rating">
+							<b>Рейтинг:</b>
+							{% csrf_token %}
+							<input type="hidden" value="{{ movie.id }}" name="movie">
+							<span class="rating">
+								{% for k, v in star_form.fields.star.choices %}
+									<input id="rating{{ v }}" type="radio" name="star" value="{{ k }}">
+									<label for="rating{{ v }}">{{ k }}</label>
+								{% endfor %}
+							</span>
+						</form>
 					</li>
 				</ul>
 				<div class="share-desc">
@@ -110,14 +113,6 @@
 				{% endfor %}
 			</p>
 			<p class="editContent">{{ movie.description|safe }}</p>
-			{#			<p class="mt-3 italic-blue editContent">#}
-			{#				<iframe width="560" height="315"#}
-			{#				        src="https://www.youtube.com/embed/A36LahZNUiE?controls=0"#}
-			{#				        frameborder="0" allow="accelerometer; autoplay;#}
-			{#                                                                           encrypted-media; gyroscope; picture-in-picture"#}
-			{#				        allowfullscreen>#}
-			{#				</iframe>#}
-			{#			</p>#}
 		</div>
 		<hr>
 		<div class="row">
