--- a/templates/movies/movie_list.html
+++ b/templates/movies/movie_list.html
@@ -37,7 +37,7 @@
 			{% endfor %}
 		</div>
 		<div class="grid-img-right mt-4 text-right bg bg1">
-{#			{% include 'include/pagination.html' %}#}
+			{% include 'include/pagination.html' %}
 		</div>
 	</div>
 {% endblock movie %}
