--- a/templates/movies/movie_detail.html
+++ b/templates/movies/movie_detail.html
@@ -23,7 +23,7 @@
 				<h5 class="editContent"></h5>
 				<ul>
 					<li>
-						<span><b>Год:</b> {{ movie.year }}{{ movie.get_rating }}</span>
+						<span><b>Год:</b> {{ movie.year }}</span>
 					</li>
 					<li>
 						<span><b>Страна:</b> {{ movie.country }}</span>
@@ -131,24 +131,22 @@
 						<label for="contactcomment" class="editContent">
 							Ваш комментарий *
 						</label>
-						<textarea class="form-control border" rows="5" id="contactcomment" required="" name="text">
-							</textarea>
+						{{ form.text }}
 					</div>
 					<div class="d-sm-flex">
 						<div class="col-sm-6 form-group p-0 editContent">
 							<label for="contactusername" class="editContent">
 								Имя *
 							</label>
-							<input type="text" class="form-control border" id="contactusername" required=""
-							       name="name">
+							{{ form.name }}
 						</div>
 						<div class="col-sm-6 form-group ml-sm-3 editContent">
 							<label for="contactemail" class="editContent">
 								Email *
 							</label>
-							<input type="email" class="form-control border" id="contactemail" required=""
-							       name="email">
+							{{ form.email }}
 						</div>
+						{{ form.captcha }}
 					</div>
 					<button type="submit" class="mt-3 btn btn-success btn-block py-3">
 						Отправить
